Only check addressable static fields if they were already printed

Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=30057